# experimental

./: .clang-format  .gitignore  CMakeLists.txt  README.md  ast-test.rye  run_tests.py
.cursor/rules/: auto-commit.mdc
.github/workflows/: ci.yml
editor/: package-extension.sh
editor/vscode-rye/: extension.js  language-configuration.json  package-lock.json  package.json
editor/vscode-rye/snippets/: rye.json
editor/vscode-rye/syntaxes/: rye.tmLanguage.json
runtime/: ryert.rye
src/: arena.hpp  common.hpp  compile_cache.hpp  compile_config.hpp  host.hpp  main.cpp  module.hpp  rye_paths.cpp  rye_paths.hpp  test_runner.cpp  test_runner.hpp
src/checker/: checker.cpp  checker.hpp  checker_comptime.cpp  checker_types.hpp  comptime.hpp  module_registry.hpp
src/codegen/: codegen.cpp  codegen.hpp  regalloc.cpp  regalloc.hpp
src/codegen/emitters/: aarch64_linux_gas.cpp  aarch64_linux_gas.hpp  aarch64_macos_gas.cpp  aarch64_macos_gas.hpp  x86_64_linux_gas.cpp  x86_64_linux_gas.hpp
src/frontend/: project.cpp  project.hpp
src/ir/: ir.cpp  ir.hpp  irgen.cpp  irgen.hpp
src/lexer/: lexer.cpp  lexer.hpp  token.hpp
src/lsp/: format.cpp  format.hpp  ide.cpp  ide.hpp  json.cpp  json.hpp  server.cpp  server.hpp
src/parser/: ast.hpp  comptime_parse.cpp  comptime_parse.hpp  for_in_desugar.cpp  for_in_desugar.hpp  parser.cpp  parser.hpp  printer.hpp
std/: alloc.rye  arena.rye  compiler.rye  io.rye  math.rye  mem.rye  string.rye
tests/: .gitignore  test-001.rye  test-002.rye  test-003.rye  test-004.rye  test-005.rye  test-006.rye  test-007.rye  test-008.rye  test-009.rye  test-010.rye  test-011.rye  test-012.rye  test-013.rye  test-014.rye  test-015.rye  test-016.rye  test-017.rye  test-018.rye  test-019.rye  test-020.rye  test-021.rye  test-022.rye  test-023.rye  test-024.rye  test-025.rye  test-026.rye  test-027.rye  test-028.rye  test-029.rye  test-030.rye  test-031.rye  test-032.rye  test-033.rye  test-034.rye  test-035.rye  test-036.rye  test-037.rye  test-038.rye  test-039.rye  (+29 more)
tests/lib/: math.rye  other.rye
